--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover{
 }
 
 .container{
-    width: 85%;
+    width: 90%;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -72,41 +72,99 @@ a:hover{
     font-size: 18px;
 }
 
-ol{
+.howToPlay ol{
     margin-left: 20px;
 }
 
-ul{
+.howToPlay ul{
     margin-left: 45px;
     list-style: disc;
     font-size: 14px;
     margin-block: 5px;
 }
 
-.game{
-    display: flex;
-    gap: 100px;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-}
-
-.game .playerChoice{
+.choices{
     display: flex;
     flex-wrap: wrap;
-    align-content: center;
+    align-items: center;
     justify-content: center;
+    text-align: center;
     gap: 30px;
 }
 
-.game .computerChoice{
-    background-color: rebeccapurple;
-    width: 20vw;
-    height: 20vw;
+.choices h2{
+    font-size: 16px;
+    margin: 5px;
+    justify-self: flex-start;
 }
+
+.choices .playerChoice{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    border: 1px solid black;
+    height: 19vw;
+    padding-inline: 15px;
+}
+
+.icon.selected{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.7s ease;
+}
+
+.versus{
+    font-size: 4em;
+}
+
+.computerChoice{
+    border: 1px solid black;
+    min-height: 19vw;
+    max-height: 20vw;
+    min-width: 11vw;
+    max-width: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}  
 
 img{
-    max-width: 20vw ;
-    max-height: 20vw;
+    width: 10vw ;
+    height: 10vw;;
 }
 
+.result{
+    text-align: center;
+    font-size: 18px;
+    margin-top: 50px;
+    width: 100%;
+    min-height: 20vh;
+    border: 1px solid black;
+}
+
+.result h2{
+    margin: 10px auto;
+}
+
+.result ul{
+    list-style: none;
+    text-align: left;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.newGameBtn{
+    margin: 10px auto;
+}
+
+.hidden{
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+}
