--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: sans-serif;
     font: inherit;
-    color: hsl(0, 0%, 80%);
+    color: hsl(0, 0%, 0%);
 }
 
 body {
@@ -20,33 +20,33 @@ body>* {
 }
 
 a {
-    color: hsl(0, 0%, 40%);
+    color: hsl(0, 0%, 25%);
     text-decoration: none;
 }
 
 a:hover {
-    color: hsl(0, 0%, 30%);
+    color: hsl(0, 0%, 60%);
 }
 
 header,
 footer {
-    background-color: hsl(213, 31%, 6%);
+    background-color: hsl(28, 69%, 90%);
     padding-block: 20px;
     text-align: center;
 }
 
-footer{
+footer {
     padding-bottom: 0;
 }
 
 h1 {
-    font-size: 42px;
+    font-size: 30px;
     text-align: center;
     margin-bottom: 10px;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
     margin: 15px;
 }
@@ -57,7 +57,7 @@ footer p {
 }
 
 main {
-    background-color: hsl(216, 18%, 20%);
+    background-color: hsl(28, 84%, 96%);
     flex: 1;
     display: flex;
     align-items: center;
@@ -73,7 +73,8 @@ main {
 }
 
 .howToPlay {
-    border: 2px solid hsl(213, 31%, 6%);
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px hsla(0, 0%, 0%, 0.2);
     padding: 15px;
     margin-bottom: 50px;
 }
@@ -96,22 +97,23 @@ main {
 
 .choices {
     display: flex;
+    gap: 15px;
     justify-content: space-between;
     align-items: center;
-    gap: 5vw;
 }
 
 .icon {
-    background-color: hsl(216, 29%, 10%);
-    border: 1px solid black;
+    background-color: hsl(28, 69%, 95%);
+    border: 0px;
+    box-shadow: 0px 0px 4px hsla(0, 0%, 0%, 0.3);
     text-align: center;
     padding: 10px;
     border-radius: 25px;
     cursor: pointer;
 }
 
-.icon:hover{
-    background-color: hsl(216, 29%, 15%);
+.icon:hover {
+    background-color: hsl(28, 69%, 90%);
 }
 
 img {
@@ -122,6 +124,7 @@ img {
 .round {
     margin-top: 50px;
     display: flex;
+    gap: 10px;
     align-items: center;
     justify-content: space-between;
 }
@@ -132,11 +135,12 @@ img {
 
 .computerChoice,
 .playerChoice {
-    background-color: hsl(216, 29%, 10%);
+    background-color: hsl(28, 69%, 90%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
+    border: 0px;
+    box-shadow: 0px 0px 4px hsla(0, 0%, 0%, 0.3);
     border-radius: 25px;
     height: 200px;
     width: 200px;
@@ -159,25 +163,26 @@ img {
     width: 1px;
 }
 
-button{
+button {
     cursor: pointer;
-    background-color: hsl(216, 29%, 10%);
+    background-color: hsl(28, 69%, 90%);
     padding: 10px;
     font-size: 24px;
-    border: 2px solid black;
+    border: 0px;
+    box-shadow: 0px 0px 4px hsla(0, 0%, 0%, 0.3);
     border-radius: 10px;
 }
 
-.overlay{
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: hsla(0, 0%, 0%, 0.4);
+    background-color: hsla(0, 0%, 0%, 0.3);
 }
 
-.restartMsg{
+.restartMsg {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -188,7 +193,25 @@ button{
     left: calc(50% - 125px);
     height: 200px;
     width: 250px;
-    background-color: hsl(216, 18%, 16%);
+    background-color: hsl(28, 84%, 96%);
     border-radius: 25px;
-    border: 2px solid black;
+    border: 0px;
+    box-shadow: 0px 0px 4px hsla(0, 0%, 0%, 0.3);
+}
+
+@media (max-width: 500px) {
+    .game{
+        width: 100%;
+    }
+
+    img {
+        width: 20vw;
+        height: 20vw;
+    }
+
+    .computerChoice,
+    .playerChoice {
+        height: 140px;
+        width: 130px;
+    }
 }
