Changed color scheme

--- a/style.css
+++ b/style.css
@@ -30,13 +30,20 @@ a:hover {
 
 header,
 footer {
-    background-color: hsl(28, 69%, 90%);
     padding-block: 20px;
     text-align: center;
 }
 
+header{
+    font-weight: bolder;
+    box-shadow: 5px 5px 10px -5px hsl(0, 0%, 50%);
+    background-color: hsl(0, 100%, 99%);
+    padding-bottom: 2rem;
+}
+
 footer {
     padding-bottom: 0;
+    background-color: hsl(0, 10%, 94%);
 }
 
 h1 {
@@ -57,7 +64,7 @@ footer p {
 }
 
 main {
-    background-color: hsl(28, 84%, 96%);
+    background-color: hsl(0, 10%, 94%);
     flex: 1;
     display: flex;
     align-items: center;
@@ -73,6 +80,7 @@ main {
 }
 
 .howToPlay {
+    background-color:hsl(0, 100%, 99%) ;
     border-radius: 15px;
     box-shadow: 0px 0px 8px hsla(0, 0%, 0%, 0.2);
     padding: 15px;
@@ -103,7 +111,7 @@ main {
 }
 
 .icon {
-    background-color: hsl(28, 69%, 95%);
+    background-color: hsl(0, 100%, 99%);
     border: 0px;
     box-shadow: 0px 0px 4px hsla(0, 0%, 0%, 0.3);
     text-align: center;
@@ -113,7 +121,7 @@ main {
 }
 
 .icon:hover {
-    background-color: hsl(28, 69%, 90%);
+    background-color: hsl(24, 15%, 94%);
 }
 
 img {
@@ -135,7 +143,7 @@ img {
 
 .computerChoice,
 .playerChoice {
-    background-color: hsl(28, 69%, 90%);
+    background-color: hsl(0, 100%, 99%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,7 +173,7 @@ img {
 
 button {
     cursor: pointer;
-    background-color: hsl(28, 69%, 90%);
+    background-color: hsl(0, 100%, 99%);
     padding: 10px;
     font-size: 24px;
     border: 0px;
